Fix positioning in styles from LearnBoost/kue#337

--- a/styles/error.import.styl
+++ b/styles/error.import.styl
@@ -1,7 +1,7 @@
 
 #xue-ui
   #error
-    fixed: top - 50px right 15px
+    fixed: top -50px right 15px
     padding: 20px
     transition: top 500ms, opacity 500ms
     opacity: 0
