Add error message and simplify state checking

--- a/styles/job.import.styl
+++ b/styles/job.import.styl
@@ -126,3 +126,7 @@ bar(color)
     border-bottom: 1px solid light - 35%
     &:last-child
       border-bottom: none
+
+  // error message
+  .job .errorMessage
+    color: #842a2a
